# CacheTaskJavaCode

./: .py  main.py  pyproject.toml  singleton_class.py  singleton_metaclass.py
tasks/: singleton_imports.py
tasks/course_1/module_1/: lru_cache.py
tasks/course_1/module_2/: binary_search.py
tasks/course_1/module_3/fetch_urls/: fetch_urls.py  results.jsonl
tasks/course_1/module_3/fetch_urls_upgrade/: result.jsonl  urls.txt
tasks/course_1/module_3/multiprocessing/: pr_pool.py  processes.py  results.jsonl
tasks/course_1/module_6/: text.py
tasks/course_2/module_1/: rate_limiter.py  redis_decorator.py  redis_queue.py
tasks/course_2/module_1/select_for_update/: db.py  main.py
tasks/course_2/module_1/select_for_update/alembic/: env.py
tasks/course_2/module_1/select_for_update/alembic/versions/: 16e0684a0034_.py  346665b6c337_.py  6be011f988da_new.py
tasks/module_1/: datetime_metaclass.py
tasks/module_3/: fetch_urls.py
tasks/module_3/data_handling/: data_handling.py  results.json
tasks/module_3/fetch_urls/: fetch_urls.py
tasks/module_3/fetch_urls_upgrade/: fetch_urls.py  result.jsonl
tasks/module_3/multiprocessing/: main.py  results.json  thread_pool.py
tasks/module_5/: google_request.py  request_google.py
tasks/module_6/: currency_proxy.py
