[project]
name = "uv-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 100  
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]  
ignore = [
    "E501", "D", "UP035", "ANN401", "B010", "B009", "SIM117"
]  
