[project]
name = "uv-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "redis>=5.2.1",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 100  
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]  
ignore = [
    "E501", "D", "UP035", "ANN401", "B010", "B009", "SIM117"
]  
